re PR middle-end/54838 (ICE: in merge_latch_edges, at cfgloop.c:678 with -ftracer)

PR54838

From-SVN: r194060